# BeeApi/controllers/object.go
@@ -22,8 +22,8 @@ func (o *ObjectController) Post() {
 	var ob models.Object
 	json.Unmarshal(o.Ctx.Input.RequestBody, &ob)
 	objectid := models.AddOne(ob)
-	o.Data["json"] = map[string]string{"ObjectId": objectid}
-	o.ServeJSON()
+	o.Data["xml"] = models.SF(objectid)
+	o.ServeXML()
 }
 
 // @Title Get
